@@ -1,3 +1,6 @@
+2011-08-21 Tamino Dauth <tamino@cdauth.eu>
+* editor: Fixed OGRE image loading (related classes are: editor::Texture and editor::BlpCodec).
+
 2011-08-20 Tamino Dauth <tamino@cdauth.eu>
 * Added Warcraft III related MIME files.
 
